# petal

./: Cargo.toml  pet.pest
spec/: basic.fg  basic.pet  if.pet  indexing.pet  lambda.pet  precedence.pet  while.pet
src/: errors.rs  helpers.rs  main.rs  object.rs  scope.rs  types.rs
src/ast/: macros.rs  mod.rs  op.rs  parser.rs
src/eval/: builtins.rs  intrinsics.rs  mod.rs  repl.rs  tasks.rs
