[package]
name = "petal"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
glob = "0.3.1"
itertools = "0.13.0"
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = "4.0.0"
pest = "2.7.10"
pest_derive = "2.7.10"
rustyline = { version = "14.0.0", features = ["derive"] }

[[bin]]
name = "pet"
path = "src/main.rs"