[package]
name = "petalang"
version = "0.0.1"
edition = "2021"
description = "A toy interpreted language"
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
glob = "0.3.1"
itertools = "0.13.0"
miette = { version = "7.2.0", features = ["fancy"] }
once_cell = "1.19.0"
owo-colors = "4.0.0"
pest = "2.7.10"
pest_derive = "2.7.10"
rustyline = { version = "14.0.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[[bin]]
name = "pet"
path = "src/main.rs"
